# Qt_pdf_viewer

./: CMakeLists.txt  README.md  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui
include/: event_overlay_widget.h  main_window.h  mainwidget.h  page_selector.h  pageselector.h  pdf_viewer_widget.h  zoom_selector.h  zoomselector.h
source/: event_overlay_widget.cpp  main_window.cpp  mainwidget.cpp  page_selector.cpp  pageselector.cpp  pdf_viewer_widget.cpp  zoom_selector.cpp  zoomselector.cpp
ui/: main_window.ui  mainwidget.ui  pdf_viewer_widget.ui
